--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "html-webpack-plugin": "^5.5.0",
     "image-minimizer-webpack-plugin": "^3.2.3",
     "mini-css-extract-plugin": "^2.6.0",
+    "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.0.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
@@ -30,8 +31,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-sass": "^7.0.1",
     "pug": "^3.0.2",
-    "pug-plugin": "^2.7.2"
+    "pug-plugin": "^2.7.2",
+    "sass": "^1.52.3"
   }
 }
