--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "css-minimizer-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "markdown-it": "^13.0.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "prismjs": "^1.28.0",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.0.0",
     "webpack": "^5.73.0",
